fixed a bug where why section would fade out if hovered on mobile

--- a/_assets_/css/layout.css
+++ b/_assets_/css/layout.css
@@ -530,7 +530,7 @@ footer{background-color:#3c6eaf;padding:36px 0 37px;color:#fff}
 	.why-info-icon{margin:15px auto}
 	.why-info-container{background-color:#215fa8;border-radius:4px}
 	.why-info-container h3{color:#fff;margin:15px 0}
-	.why-info{border-radius:0 0 4px 4px}
+	.why-info{border-radius:0 0 4px 4px;display:block!important}
 	.why-info:after{display:none}
 
 	#useful-links-wrapper{padding:0 45px}
